force-app/main/default/objects/SDR_EnpointServiciosFedex__mdt/fields/contentType__c.field-meta.xml
<CustomField>
    <fullName>contentType__c</fullName>
    <label>contentType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>