force-app/main/default/objects/SDR_EnpointServiciosFedex__mdt/fields/contentType_Token__c.field-meta.xml
<CustomField>
    <fullName>contentType_Token__c</fullName>
    <label>contentType Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>