force-app/main/default/objects/SDR_EnpointServiciosFedex__mdt/fields/GrantType_Token__c.field-meta.xml
<CustomField>
    <fullName>GrantType_Token__c</fullName>
    <label>GrantType_Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>