force-app/main/default/objects/SDR_EnpointServiciosFedex__mdt/fields/Metodo__c.field-meta.xml
<CustomField>
    <fullName>Metodo__c</fullName>
    <label>Método</label>
    <length>10</length>
    <type>Text</type>
</CustomField>