force-app/main/default/objects/SDR_EnpointServiciosFedex__mdt/fields/Metodo_token__c.field-meta.xml
<CustomField>
    <fullName>Metodo_token__c</fullName>
    <label>Método token</label>
    <length>10</length>
    <type>Text</type>
</CustomField>