force-app/main/default/objects/SDR_EnpointServiciosFedex__mdt/fields/URL_Token__c.field-meta.xml
<CustomField>
    <fullName>URL_Token__c</fullName>
    <label>URL_Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>